--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
-    "eslint": "^7.18.0",
     "gsap": "^3.6.0",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
@@ -46,6 +45,8 @@
     ]
   },
   "devDependencies": {
+    "eslint": "^7.18.0",
+    "eslint-plugin-react": "^7.22.0",
     "gh-pages": "^3.1.0"
   }
 }
