--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "sass": "^1.32.0",
+    "underscore": "^1.12.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
