--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-gsap": "^2.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-scrollspy": "^3.4.3",
     "sass": "^1.32.0",
     "underscore": "^1.12.0",
     "web-vitals": "^0.2.4"
